--- a/website/tests/index.html
+++ b/website/tests/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TwigParserDemo Tests</title>
+    <title>Twig Parser Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
