--- a/packages/website/app/index.html
+++ b/packages/website/app/index.html
@@ -5,6 +5,7 @@
     <title>Twig Parser</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/svg+xml" href="{{rootURL}}logo.svg">
 
     {{content-for "head"}}
 
