--- a/website/app/index.html
+++ b/website/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/twig-parser-demo.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/website.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/twig-parser-demo.js"></script>
+    <script src="{{rootURL}}assets/website.js"></script>
 
     {{content-for "body-footer"}}
   </body>
